# sslkeylog-processor

./: .cspell.json  .gitignore  .markdownlint.json  Cargo.toml  README.md  rustfmt.toml
src/: configuration.rs  data_model.rs  datamodel.rs  errors.rs  filesystem.rs  geolocator.rs  logging.rs  main.rs  process.rs  processor.rs  storage.rs  to_bson.rs
