[package]
name = "sslkeylog-processor"
version = "0.18.7"
authors = ["Aristarkh Zagorodnikov <xm@x-infinity.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.102"
regex = "1.12.3"
time = "0.3.47"
# Updating to 3.x is not possible since interaction between mongodb and bson crates is broken WRT time support
bson = { version = "2.15.0", features = ["time-0_3"] }
mongodb = { version = "3.6.0", features = ["sync"] }
hex = "0.4.3"
lazy_static = "1.5.0"
getopts = "0.2.24"
url = "2.5.8"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4"

[profile.release]
lto = true
strip = true
opt-level = "s"
panic = "abort"
codegen-units = 1
